src/test/deca/context/valid/nonprovided/decoration_expr.deca
{
int x = 4;
float y = 3.2f;
y = x + y;
}
