src/test/deca/context/invalid/identifier.deca
{
int x;
x = "3.4f";
}
